# atc-trading-bot

./: .gitignore  README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
src/atc_trading_bot/: __init__.py  bot.py  config.py  pipeline_warning.py
src/atc_trading_bot/mixins/: __init__.py  backtest_mixin.py  data_mixin.py  explainability_mixin.py  feature_mixin.py  labeling_mixin.py  model_mixin.py  optimization_mixin.py  persistence_mixin.py  regime_mixin.py  scanner_mixin.py  sentiment_mixin.py  signal_mixin.py  strategy_mixin.py  trading_mixin.py  visualization_mixin.py
src/atc_trading_bot/strategies/: __init__.py  bear_strategy.py  breakout_strategy.py  bull_strategy.py  ml_strategy.py  momentum_strategy.py  sideways_strategy.py  volatility_strategy.py
tests/: conftest.py  test_backtest_mixin.py  test_bot.py  test_config.py  test_data_mixin.py  test_explainability_mixin.py  test_feature_mixin.py  test_labeling_mixin.py  test_leverage.py  test_model_mixin.py  test_new_strategies.py  test_optimization_mixin.py  test_persistence_mixin.py  test_regime_mixin.py  test_scanner_mixin.py  test_sentiment_mixin.py  test_signal_mixin.py  test_strategy_mixin.py  test_trading_mixin.py  test_visualization_mixin.py
