[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atc-trading-bot"
version = "0.1.0"
description = "Algorithmic trading bot with HMM regime detection and adaptive strategies"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.0",
    "backtesting>=0.3.3",
    "ta>=0.11",
    "hmmlearn>=0.3",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",

    "lightgbm>=4.0",
    "catboost>=1.2",
    "xgboost>=2.0",
    "optuna>=3.0",
    "shap>=0.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
